--- a/src/Recommended/Recommended.css
+++ b/src/Recommended/Recommended.css
@@ -10,6 +10,7 @@
 .btn{
     color: #434242;
     margin-right: 8px;
+    margin-bottom: 8px;
     padding: 6px 14px;
     background-color: white;
     border: 1px solid lightgray;
@@ -21,4 +22,11 @@
     background-color: black;
     color: white;
     border: none;
+}
+
+@media (max-width: 610px){
+    .recommended-container{
+        margin-top: 82px;
+        margin-left: 180px;
+    }    
 }
