--- a/src/Sidebar/Sidebar.css
+++ b/src/Sidebar/Sidebar.css
@@ -9,3 +9,10 @@
     padding-top: 30px;
     border-right: 2px solid #f3f3f3;
 }
+
+@media (max-width: 610px){
+    .sidebar{
+        width: 160px;
+        padding-left: 20px;
+    }
+}
